Mon Apr 30 20:29:27 2001  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkbutton.c gtk/gtkcheckbutton.c gtk/gtkoptionmenu.c 
	  gtk/gtkspinbutton.c gtk/gtkstyle.c gtk/gtkwidget.c:
  	  New default theme! A slighly improved version of the 2.0 Raleigh
	  theme, with Windows-esque focus/drawing default. 
	  (GtkWidget::interior_focus defaults to TRUE.)

	* gtk/gtkstyle.[ch]: Add a text_aa color halfway between text and base.

2001-04-30  Havoc Pennington  <hp@pobox.com>

	* tests/testtext.c (line_numbers_expose): fix to work with
	gtk_paint_layout change

Mon Apr 30 19:18:07 2001  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkstyle.[ch] gtk/gtkaccellabel.c gtk/gtkcellrenderertext.c
	  gtk/gtkhruler.c gtk/gtkhscale.c gtk/gtklabel.c gtk/gtkprogressbar.c
	  gtk/gtkvruler.c gtk/gtkvscale.c: Add an extra parameter
          use_text to gtk_paint_label() to deal with style->bg[] vs style->text[].

	* gtk/gtkbbox.c gtk/gtkdialog.c: Tweak padding some to deal
	  with GtkWidget::interior_focus = TRUE better.

	* gtk/gtkbutton.c: Switch ::default_spacing to ::default_border,
	::default_outside_border for more flexibility.

	* gtk/gtkwidget.c (gtk_widget_style_get_valist): Remove 
	G_VALUE_NO_COPY_CONTENTS, to correspond with the recent
	change that had to be made with g_object_get.

Sun Apr 29 20:13:40 2001  Jonathan Blandford  <jrb@redhat.com>

	* gtk/gtktreeview.c (gtk_tree_view_get_columns): new function.
	(gtk_tree_view_move_column_after): Clean up interface. 

Sun Apr 29 03:02:02 2001  Tim Janik  <timj@gtk.org>

        * gtk/gtkpacker.h:
        * gtk/gtkenums.h: moved GtkAnchorType and GtkSideType from gtkpacker.h
	 to gtkenum.h.

	* gtk/gtkmain.c (gtk_main_do_event): silence compiler (GDK_SETTING not
	handled in switch).

	* gtk/Makefile.am:
	(gtk.defs): generate enum portions with  glib-mkenums.
	(gtktypebuiltins_evals.c): generate this with glib-mkenums.
	got rid of makeenums.pl and makeenums.awk in distributed tarballs.
	